// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinachAppContainer renders children correctly 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "red",
          "borderWidth": 0,
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../assets/images/spinach.jpg",
        }
      }
      style={
        {
          "borderColor": "black",
          "borderWidth": 0,
          "height": 1334,
          "position": "absolute",
          "width": 750,
        }
      }
    />
    <RCTScrollView
      keyboardShouldPersistTaps="always"
      nestedScrollEnabled={true}
      scrollEnabled={true}
      style={
        {
          "borderColor": "yellow",
          "borderWidth": 0,
          "flex": 1,
        }
      }
    >
      <View>
        <View
          testID="test-child"
        >
          <Text>
            Test Child Content
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`SpinachAppContainer renders multiple children correctly 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      {
        "testUri": "../../../assets/images/spinach.jpg",
      }
    }
    style={
      {
        "borderColor": "black",
        "borderWidth": 0,
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
  <View
    testID="child-1"
  >
    <Text>
      First Child
    </Text>
  </View>
  <View
    testID="child-2"
  >
    <Text>
      Second Child
    </Text>
  </View>
</View>
`;

exports[`SpinachAppContainer renders with scrollView and activityIndicator on Android 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "borderColor": "red",
        "borderWidth": 0,
        "flex": 1,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../assets/images/spinach.jpg",
        }
      }
      style={
        {
          "borderColor": "black",
          "borderWidth": 0,
          "height": 1334,
          "position": "absolute",
          "width": 750,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fff59b",
          "borderColor": "#104e01",
          "borderRadius": 11.25,
          "borderWidth": 1,
          "height": 50,
          "justifyContent": "center",
          "left": "50%",
          "marginLeft": -25,
          "position": "absolute",
          "top": "10%",
          "width": 50,
          "zIndex": 5,
        }
      }
    >
      <ActivityIndicator
        color="#104e01"
        size="large"
        style={{}}
        testID="activityIndicator"
      />
    </View>
    <RCTScrollView
      keyboardShouldPersistTaps="always"
      nestedScrollEnabled={true}
      scrollEnabled={true}
      style={
        {
          "borderColor": "yellow",
          "borderWidth": 0,
          "flex": 1,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`SpinachAppContainer renders with scrollView and activityIndicator on IOS 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "red",
          "borderWidth": 0,
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../assets/images/spinach.jpg",
        }
      }
      style={
        {
          "borderColor": "black",
          "borderWidth": 0,
          "height": 1334,
          "position": "absolute",
          "width": 750,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fff59b",
          "borderColor": "#104e01",
          "borderRadius": 11.25,
          "borderWidth": 1,
          "height": 50,
          "justifyContent": "center",
          "left": "50%",
          "marginLeft": -25,
          "position": "absolute",
          "top": "10%",
          "width": 50,
          "zIndex": 5,
        }
      }
    >
      <ActivityIndicator
        color="#104e01"
        size="large"
        style={
          {
            "left": 1.25,
            "top": 1.7,
          }
        }
        testID="activityIndicator"
      />
    </View>
    <RCTScrollView
      keyboardShouldPersistTaps="always"
      nestedScrollEnabled={true}
      scrollEnabled={true}
      style={
        {
          "borderColor": "yellow",
          "borderWidth": 0,
          "flex": 1,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`SpinachAppContainer renders with scrollView on Android 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "borderColor": "red",
        "borderWidth": 0,
        "flex": 1,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../assets/images/spinach.jpg",
        }
      }
      style={
        {
          "borderColor": "black",
          "borderWidth": 0,
          "height": 1334,
          "position": "absolute",
          "width": 750,
        }
      }
    />
    <RCTScrollView
      keyboardShouldPersistTaps="always"
      nestedScrollEnabled={true}
      scrollEnabled={true}
      style={
        {
          "borderColor": "yellow",
          "borderWidth": 0,
          "flex": 1,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`SpinachAppContainer renders with scrollView on IOS 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "red",
          "borderWidth": 0,
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../assets/images/spinach.jpg",
        }
      }
      style={
        {
          "borderColor": "black",
          "borderWidth": 0,
          "height": 1334,
          "position": "absolute",
          "width": 750,
        }
      }
    />
    <RCTScrollView
      keyboardShouldPersistTaps="always"
      nestedScrollEnabled={true}
      scrollEnabled={true}
      style={
        {
          "borderColor": "yellow",
          "borderWidth": 0,
          "flex": 1,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`SpinachAppContainer renders without scrollView and with ActivityIndicator on Android 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      {
        "testUri": "../../../assets/images/spinach.jpg",
      }
    }
    style={
      {
        "borderColor": "black",
        "borderWidth": 0,
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff59b",
        "borderColor": "#104e01",
        "borderRadius": 11.25,
        "borderWidth": 1,
        "height": 50,
        "justifyContent": "center",
        "left": "50%",
        "marginLeft": -25,
        "position": "absolute",
        "top": "10%",
        "width": 50,
        "zIndex": 5,
      }
    }
  >
    <ActivityIndicator
      color="#104e01"
      size="large"
      style={{}}
      testID="activityIndicator"
    />
  </View>
</View>
`;

exports[`SpinachAppContainer renders without scrollView and with ActivityIndicator on IOS 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      {
        "testUri": "../../../assets/images/spinach.jpg",
      }
    }
    style={
      {
        "borderColor": "black",
        "borderWidth": 0,
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff59b",
        "borderColor": "#104e01",
        "borderRadius": 11.25,
        "borderWidth": 1,
        "height": 50,
        "justifyContent": "center",
        "left": "50%",
        "marginLeft": -25,
        "position": "absolute",
        "top": "10%",
        "width": 50,
        "zIndex": 5,
      }
    }
  >
    <ActivityIndicator
      color="#104e01"
      size="large"
      style={
        {
          "left": 1.25,
          "top": 1.7,
        }
      }
      testID="activityIndicator"
    />
  </View>
</View>
`;

exports[`SpinachAppContainer renders without scrollView on Android 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      {
        "testUri": "../../../assets/images/spinach.jpg",
      }
    }
    style={
      {
        "borderColor": "black",
        "borderWidth": 0,
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
</View>
`;

exports[`SpinachAppContainer renders without scrollView on IOS 1`] = `
<View
  style={
    {
      "borderColor": "blue",
      "borderWidth": 0,
      "flex": 1,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      {
        "testUri": "../../../assets/images/spinach.jpg",
      }
    }
    style={
      {
        "borderColor": "black",
        "borderWidth": 0,
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
</View>
`;
